# GameEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
GameEngine/: CMakeLists.txt  application.cpp  application.h  core.h
GameEngine/include/: core.h  event.h  platform.h  renderer.h
GameEngine/src/platform/: linux.c  windows.c
GameEngine/src/renderer/: opengl_renderer.c
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/src/: main.c
